--- a/app/src/main/res/layout/animeactivitytest.xml
+++ b/app/src/main/res/layout/animeactivitytest.xml
@@ -188,6 +188,7 @@
                             android:layout_marginTop="5dp">
 
                             <TextView
+                                android:id="@+id/aa_patientName"
                                 android:layout_width="78dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
