--- a/app/src/main/res/layout/assignpatient.xml
+++ b/app/src/main/res/layout/assignpatient.xml
@@ -282,14 +282,16 @@
         app:layout_constraintTop_toBottomOf="@+id/linaercard"
         android:text="Assign Patient">
     </TextView>
+
     <Spinner
-        android:id="@+id/spinnerMhe"
+        android:id="@+id/spinnerAssign"
         android:layout_width="match_parent"
         android:layout_height="66dp"
+        android:layout_margin="30dp"
+        android:layout_marginTop="24dp"
         android:autofillHints="Select MHE"
         android:background="@drawable/border_style"
         android:spinnerMode="dropdown"
-        android:layout_margin="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/assignpatienttext" />
