--- a/app/src/main/res/layout/animeactivitytest.xml
+++ b/app/src/main/res/layout/animeactivitytest.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DashboardBmr.Out_Patient_Dashboard.activity.Animeactivity"
+    tools:context=".DashboardBmr.Out_Patient_Dashboard.activity.PatientDetails"
     >
 
     <com.google.android.material.appbar.AppBarLayout
